[package]
authors = ["tirust"]
edition = "2018"
readme = "README.md"
name = "comparator-interrupt"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[dependencies.cortex-m]
version = "0.6.0"
features = ["const-fn"]

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[dependencies.msp432e4]
version = "0.1.1"
features = ["rt"]
# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "comparator-interrupt"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
